# spork-lang

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  install.sh  pyproject.toml  setup.py
.github/workflows/: build.yml  test.yml
docs/: BENCHMARKS.md  IDEAS.md  LANG.md  README.md  STDLIB.md
editors/emacs/: README.md  spork-mode.el
editors/nvim/: README.md
editors/nvim/ftdetect/: spork.vim
editors/nvim/ftplugin/: spork.vim
editors/nvim/indent/: spork.vim
editors/nvim/lua/spork/: init.lua
editors/nvim/plugin/: spork.vim
editors/nvim/syntax/: spork.vim
examples/: demo.spork  readme.spork
examples/async/: .gitignore  README.md  spork.it
examples/stars/: README.md  spork.it
spork/: __init__.py  __main__.py  cli.py
spork/compiler/: __init__.py  codegen.py  loader.py  macros.py  reader.py  reader_macros.py
spork/lsp/: __init__.py  protocol.py  server.py
spork/project/: __init__.py  build.py  config.py  dist.py  manager.py  scaffold.py
spork/repl/: __init__.py  backend.py  nrepl.py
spork/runtime/: __init__.py  core.py  json.py  ns.py  pds.c  pds.pyi  types.py  utils.py
spork/std/: __init__.py  json.spork  map.spork  prelude.spork  string.spork
tests/: __init__.py  bench_data_structures.spork  test_async.spork  test_async_advanced.spork  test_block_with_result.spork  test_comprehensive.spork  test_decorators.spork  test_defclass.spork  test_destructuring.spork  test_exceptions.spork  test_expression_everywhere.spork  test_fmt.spork  test_generator_error.spork  test_gensym.spork  test_import_macros.spork  test_keyword_args.spork  test_lazy_minimal.spork  test_lazy_seqs.spork  test_let_do_refactor_demo.spork  test_let_refactor.spork  test_let_statements.spork  test_loop_recur.spork  test_lsp.py  test_macro.spork  test_macros.spork  test_map_merge.spork  test_method_call.spork  test_multi_arity.spork  test_multi_dispatch.spork  test_nested_let.spork  test_ns.spork  test_pattern_matching.spork  test_pds.spork  test_pickle.spork  test_protocols.spork  test_quasiquote_vector.spork  test_reader_macros.spork  test_require_macros.spork  test_require_refer_all.spork  test_set.spork  (+19 more)
tests/fuzzing/: __init__.py  __main__.py  fuzz.py  fuzz_vector.py
tools/: benchmark_pds.py  generate_benchmark_report.py  host_info.py
(+2 files in other folders)
